<resources>
    <string name="app_name">ProjectCapstone</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="title_sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="hello_new_mate">Hello, new mate!</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="people">people</string>
    <string name="first_time_create_an_account_now">First time? Create an account now!</string>
    <string name="logo">logo</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="wishlist">Wishlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="back">back</string>
    <string name="profileimage">profileImage</string>
    <string name="camera">camera</string>
    <string name="iconpeople">iconPeople</string>
    <string name="akun">Akun</string>
    <string name="arrow">arrow</string>
    <string name="iconpassword">iconPassword</string>
    <string name="privasi">Privasi</string>
    <string name="about">about</string>
    <string name="tentang_kami">Tentang kami</string>
    <string name="iconlogout">iconLogout</string>
    <string name="keluar_akun">Keluar Akun</string>
    <string name="hey_elx">Hey Elx</string>
    <string name="notification">notification</string>
    <string name="wonderful_indonesia">Wonderful Indonesia</string>
    <string name="let_s_explore_together">Let’s Explore Together</string>
    <string name="popular">Popular</string>
    <string name="nearby">Nearby</string>
    <string name="recomended">Recomended</string>
    <string name="saved_place">Saved Place</string>
    <string name="favorite">Favorite</string>
    <string name="kategori">Kategori</string>
    <string name="wisata_alam">Wisata alam</string>
    <string name="wisata_religi">Wisata Religi</string>
    <string name="wisata_pendidikan">Wisata Pendidikan</string>
    <string name="wisata_sejarah">Wisata Sejarah</string>
    <string name="titlenotification">Notification</string>
    <string name="price">25.000-125.000</string>
    <string name="rating">4.8</string>
    <string name="location">Jawa Timur</string>
    <string name="place_name">Gunung Bromo</string>
    <string name="place_foto">place foto</string>
    <string name="detail">Detail</string>
    <string name="about_detail">About</string>
    <string name="review">Review</string>
    <string name="photo">Photo</string>
    <string name="move_to_wishlist">Move To Wishlist</string>
    <string name="backgrounddetail">backgroundDetail</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu amet tempor, in massa, habitasse habitasse fermentum, sed faucibus. Augue arcu, ac proin accumsan urna morbi diam nunc, tincidunt. Ac turpis amet vitae dui aliquam vitae nunc. Non enim, lorem duis maecenas odio Read More</string>
    <string name="add_review">Add Review</string>
    <string name="add_photo">Add Photo</string>
    <string name="click_me">Click Me!</string>
    <string name="privasi_user"><![CDATA[Kami menghargai privasi Anda dan mengutamakan perlindungan data pribadi saat menggunakan aplikasi kami. Dalam pengembangan aplikasi, kami melaksanakan langkah-langkah keamanan yang komprehensif untuk menjaga kerahasiaan informasi yang dikumpulkan. Saat Anda menggunakan aplikasi kami, kami mungkin mengumpulkan data preferensi perjalanan dan riwayat pencarian untuk memberikan pengalaman yang lebih personal dan relevan. Namun, penting bagi kami untuk menegaskan bahwa data pribadi Anda hanya akan digunakan untuk tujuan yang telah ditentukan dan dengan izin yang sesuai. Kami tidak akan membagikan informasi pribadi Anda kepada pihak ketiga tanpa persetujuan Anda yang jelas, kecuali jika diwajibkan oleh hukum atau demi meningkatkan pengalaman pengguna kami. Kami sangat menghargai kepercayaan Anda sebagai pengguna, dan kami akan terus berupaya menjaga privasi dan keamanan data Anda dengan sungguh-sungguh saat menggunakan aplikasi kami.]]></string>
    <string name="desc"><![CDATA[Dalam pengembangan aplikasi kami, kami menggabungkan keahlian teknologi dengan pengetahuan mendalam tentang industri pariwisata. Tujuan utama kami adalah memudahkan perjalanan dan memperkaya pengalaman wisatawan di seluruh dunia. Kami percaya bahwa setiap orang memiliki preferensi dan kebutuhan unik dalam perjalanan mereka. Oleh karena itu, kami merancang aplikasi kami agar dapat disesuaikan dengan preferensi individu pengguna, memberikan rekomendasi perjalanan yang relevan, dan menyediakan informasi terbaru tentang tujuan wisata yang menarik. Kami sangat menghargai umpan balik dari pengguna kami dan terus melakukan pembaruan dan perbaikan berdasarkan masukan tersebut. Kami berkomitmen untuk terus mengembangkan aplikasi kami agar dapat memberikan pengalaman terbaik dan memenuhi harapan wisatawan modern. Kami bangga menjadi bagian dari industri pariwisata dan berharap dapat menjadi mitra perjalanan yang andal bagi pengguna kami. Dengan aplikasi tourism kami, kami ingin menginspirasi dan memfasilitasi petualangan yang tak terlupakan bagi semua pengguna kami.]]></string>
    <string name="privasi_title">Privasi</string>
    <string name="desc_about"><![CDATA[Dalam pengembangan aplikasi kami, kami menggabungkan keahlian teknologi dengan pengetahuan mendalam tentang industri pariwisata. Tujuan utama kami adalah memudahkan perjalanan dan memperkaya pengalaman wisatawan di seluruh dunia. Kami percaya bahwa setiap orang memiliki preferensi dan kebutuhan unik dalam perjalanan mereka. Oleh karena itu, kami merancang aplikasi kami agar dapat disesuaikan dengan preferensi individu pengguna, memberikan rekomendasi perjalanan yang relevan, dan menyediakan informasi terbaru tentang tujuan wisata yang menarik. Kami sangat menghargai umpan balik dari pengguna kami dan terus melakukan pembaruan dan perbaikan berdasarkan masukan tersebut. Kami berkomitmen untuk terus mengembangkan aplikasi kami agar dapat memberikan pengalaman terbaik dan memenuhi harapan wisatawan modern. Kami bangga menjadi bagian dari industri pariwisata dan berharap dapat menjadi mitra perjalanan yang andal bagi pengguna kami. Dengan aplikasi tourism kami, kami ingin menginspirasi dan memfasilitasi petualangan yang tak terlupakan bagi semua pengguna kami.]]></string>
    <string name="profile">Profile</string>
    <string name="splashscreen">splashScreen</string>
    <string name="all_place">All Place</string>
    <string name="gunungBromo">Gunung Bromo adalah destinasi wisata yang terkenal di Jawa Timur, Indonesia. Terletak di Taman Nasional Bromo Tengger Semeru, Gunung Bromo menawarkan pemandangan yang spektakuler dan menjadi daya tarik bagi wisatawan dari berbagai penjuru dunia. Kawasan ini dikelilingi oleh lanskap yang menakjubkan, termasuk lautan pasir yang luas yang dikenal sebagai Lautan Pasir Bromo. Di tengah lautan pasir ini, terdapat Gunung Bromo yang menjulang dengan kawah berukuran kecil di puncaknya, menciptakan pemandangan yang memukau.

Perjalanan menuju Gunung Bromo dimulai dengan menaiki kendaraan 4x4 melalui jalan berliku di pegunungan. Setelah mencapai kawasan Taman Nasional Bromo Tengger Semeru, wisatawan dapat melanjutkan perjalanan dengan berjalan kaki atau menaiki kuda untuk mencapai puncak Gunung Bromo. Saat matahari terbit, pengunjung dapat menyaksikan pemandangan matahari terbit yang memukau di atas Lautan Pasir Bromo, menciptakan suasana yang magis dan indah.

        Selain pemandangan yang menakjubkan, Gunung Bromo juga menawarkan pengalaman yang tak terlupakan bagi para pecinta petualangan. Beberapa aktivitas yang dapat dilakukan di Gunung Bromo termasuk mendaki ke puncak Gunung Bromo, menjelajahi lautan pasir dengan jeep, atau mengunjungi area kawah yang aktif seperti Kawah Bromo dan Kawah Batok. Wisatawan juga dapat menikmati keindahan alam sekitarnya dengan menjelajahi Taman Nasional Bromo Tengger Semeru, yang merupakan rumah bagi berbagai jenis flora dan fauna yang langka.</string>
    <string name="no_data_founded">Tidak Menemukan Data\n</string>
</resources>