<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hey_elx"
            android:textSize="30sp"
            android:fontFamily="@font/psemibold"
            android:paddingTop="40dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:drawableEndCompat="@drawable/notifications" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wonderful_indonesia"
        android:textSize="30sp"
        android:fontFamily="@font/pextrabold"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/let_s_explore_together"
        android:textSize="20sp"
        android:fontFamily="@font/psemibold"
        android:textColor="@color/color3"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/popular"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:fontFamily="@font/pmedium"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/color2"
            android:text="@string/nearby"
            android:fontFamily="@font/pmedium"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recomended"
            android:fontFamily="@font/pmedium"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_list_place"/>
</LinearLayout>