<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.detail.DetailPhotoFragment">

    <ImageView
        android:id="@+id/iv_place"
        android:layout_width="421dp"
        android:layout_height="435dp"
        android:src="@drawable/bg_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/place_foto" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="446dp"
        android:layout_height="611dp"
        android:layout_marginTop="176dp"
        android:src="@drawable/bg_detail2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/backgrounddetail" />

    <!-- Text View Sejajar -->

    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="357dp"
        android:layout_height="34dp"
        android:fontFamily="@font/psemibold"
        android:text="@string/detail"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/baseline_keyboard_backspace_24"
        app:layout_constraintBottom_toBottomOf="@+id/iv_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <TextView
        android:id="@+id/tv_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/pmedium"
        android:text="@string/place_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_price"
        app:layout_constraintEnd_toStartOf="@+id/tv_price"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:fontFamily="@font/pregular"
        app:layout_constraintBottom_toTopOf="@+id/tv_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/psemibold"
        android:text="@string/location"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintBottom_toTopOf="@+id/tv_rating"
        app:layout_constraintEnd_toEndOf="@+id/tv_rating"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/tv_place"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/about_detail"
        android:textAlignment="center"
        android:fontFamily="@font/pregular"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@id/tv_review"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_place" />

    <TextView
        android:id="@+id/tv_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/review"
        android:textAlignment="center"
        android:fontFamily="@font/pregular"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/tv_photo"
        app:layout_constraintStart_toEndOf="@id/tv_about"
        app:layout_constraintTop_toTopOf="@id/tv_about" />

    <TextView
        android:id="@+id/tv_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/photo"
        android:textAlignment="center"
        android:fontFamily="@font/pregular"
        android:textSize="14sp"
        android:textColor="@color/color2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_review"
        app:layout_constraintTop_toTopOf="@id/tv_about" />

    <!-- Pembatas -->
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/tv_about" />

    <!-- Tempat Untuk Menampilkan Informasi dari 3 TextView Sejajar -->

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="408dp"
        android:layout_height="166dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/pregular"
        android:text="@string/description"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button_wishlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintVertical_bias="0.0" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/CustomRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:isIndicator="true"
        android:numStars="5"
        android:stepSize="0.01"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_rating"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/pmedium"
        android:text="@string/rating"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_add_photo"
        android:layout_width="183dp"
        android:layout_height="50dp"
        android:fontFamily="@font/pmedium"
        android:text="@string/add_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.821" />

</androidx.constraintlayout.widget.ConstraintLayout>