<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_people"
    android:background="@color/background">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="24sp"
        android:fontFamily="@font/psemibold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="20dp"/>

    <!-- Profile Image -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/title"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/place"
        android:contentDescription="@string/profileimage" />

    <ImageView
        android:id="@+id/camera_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/profile_image"
        android:layout_alignStart="@id/profile_image"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_camera"
        android:contentDescription="@string/camera" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_akun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_marginTop="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="21dp"

        android:elevation="4dp"
        android:radius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit"
            android:padding="8dp">

            <ImageView
                android:id="@+id/card_1_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:src="@drawable/people"
                android:contentDescription="@string/iconpeople" />

            <TextView
                android:id="@+id/card_1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="11dp"
                android:layout_toEndOf="@id/card_1_icon"
                android:layout_toStartOf="@id/card_1_arrow"
                android:fontFamily="@font/psemibold"
                android:text="@string/akun"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/card_1_arrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_right"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/arrow" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!-- Card 2 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_privasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_akun"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="21dp"
        android:elevation="4dp"
        android:radius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit"
            android:padding="8dp">

            <ImageView
                android:id="@+id/card_2_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/password"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/iconpassword" />

            <TextView
                android:id="@+id/card_2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privasi"
                android:textSize="16sp"
                android:fontFamily="@font/psemibold"
                android:layout_toEndOf="@id/card_2_icon"
                android:layout_toStartOf="@id/card_2_arrow"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp" />

            <ImageView
                android:id="@+id/card_2_arrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_right"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/arrow" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!-- Card 3 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_tentangkami"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_privasi"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="21dp"
        android:elevation="4dp"
        android:radius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit"
            android:padding="8dp">

            <ImageView
                android:id="@+id/card_3_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/tentangkami"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/about" />

            <TextView
                android:id="@+id/card_3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tentang_kami"
                android:textSize="16sp"
                android:fontFamily="@font/psemibold"
                android:layout_toEndOf="@id/card_3_icon"
                android:layout_toStartOf="@id/card_3_arrow"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp" />

            <ImageView
                android:id="@+id/card_3_arrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_right"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/arrow" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!-- Card 4 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_keluar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_tentangkami"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="21dp"
        android:elevation="4dp"
        android:radius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit"
            android:padding="8dp">

            <ImageView
                android:id="@+id/card_4_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_exit"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/iconlogout" />

            <TextView
                android:id="@+id/card_4_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keluar_akun"
                android:textSize="16sp"
                android:fontFamily="@font/psemibold"
                android:layout_toEndOf="@id/card_4_icon"
                android:layout_toStartOf="@id/card_4_arrow"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp" />

            <ImageView
                android:id="@+id/card_4_arrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_right"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/arrow" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>