<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    tools:context=".ui.fragment.detail.DetailFragment">


    <ImageView
        android:id="@+id/iv_place"
        android:layout_width="421dp"
        android:layout_height="435dp"
        android:src="@drawable/bg_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/place_foto" />

    <!-- Text View Sejajar -->

    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="357dp"
        android:layout_height="34dp"
        android:fontFamily="@font/psemibold"
        android:text="@string/detail"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/baseline_keyboard_backspace_24"
        app:layout_constraintBottom_toBottomOf="@+id/iv_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <Button
        android:id="@+id/button_sheet"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:fontFamily="@font/psemibold"
        android:textSize="16sp"
        android:text="@string/click_me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_place"
        app:layout_constraintVertical_bias="0.282" />


</androidx.constraintlayout.widget.ConstraintLayout>